--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom css -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
-    <section class="home">
-
-    </section>
-    <section class="play-ground">
-
-
-    </section>
-    <section class="score">
-
-    </section>
+  <body class="font-poppins">
+    <main
+      class="bg-[#010313] min-h-screen bg-[url('images/background.png')] bg-no-repeat bg-center"
+    >
+      <section
+        class="home min-h-screen text-white flex justify-center items-center"
+      >
+        <div class="flex flex-col gap-5 items-center">
+          <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
+          <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+          <button class="btn btn-active bg-white text-black">Play Now</button>
+        </div>
+      </section>
+      <section class="play-ground"></section>
+      <section class="score"></section>
+    </main>
   </body>
 </html>
