--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <main
       class="bg-[#010313] min-h-screen bg-[url('images/background.png')] bg-no-repeat bg-center"
     >
+      <!-- Home screen -->
       <section
-        class="home min-h-screen text-white flex justify-center items-center"
+        class="home hidden min-h-screen text-white flex justify-center items-center"
       >
         <div class="flex flex-col gap-5 items-center">
           <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
@@ -27,7 +28,78 @@
           <button class="btn btn-active bg-white text-black">Play Now</button>
         </div>
       </section>
-      <section class="play-ground"></section>
+      <!-- Play Ground -->
+      <section class="play-ground">
+        <!-- Playground container -->
+        <div class=" flex flex-col items-center gap-20 pt-12">
+          <!-- screen -->
+          <div
+            class="artboard bg-[#FFFFFFB3] artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC]"
+          >
+           <div class="flex justify-center">
+            <p class="bg-[#2F2941] rounded-b-2xl p-2 text-white">Don't watch keyboard  while playing...</p>
+           </div>
+            <div class="flex h-full justify-center items-center">
+             <p class="text-black text-9xl font-bold">Y</p>
+            </div>
+          </div>
+          <!-- Keyboard -->
+          <div>
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd class="kbd">q</kbd>
+              <kbd class="kbd">w</kbd>
+              <kbd class="kbd">e</kbd>
+              <kbd class="kbd">r</kbd>
+              <kbd class="kbd">t</kbd>
+              <kbd class="kbd">y</kbd>
+              <kbd class="kbd">u</kbd>
+              <kbd class="kbd">i</kbd>
+              <kbd class="kbd">o</kbd>
+              <kbd class="kbd">p</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd class="kbd">a</kbd>
+              <kbd class="kbd">s</kbd>
+              <kbd class="kbd">d</kbd>
+              <kbd class="kbd">f</kbd>
+              <kbd class="kbd">g</kbd>
+              <kbd class="kbd">h</kbd>
+              <kbd class="kbd">j</kbd>
+              <kbd class="kbd">k</kbd>
+              <kbd class="kbd">l</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd class="kbd">z</kbd>
+              <kbd class="kbd">x</kbd>
+              <kbd class="kbd">c</kbd>
+              <kbd class="kbd">v</kbd>
+              <kbd class="kbd">b</kbd>
+              <kbd class="kbd">n</kbd>
+              <kbd class="kbd">m</kbd>
+              <kbd class="kbd">/</kbd>
+            </div>
+          </div>
+          <!-- life score-->
+          <div class="flex w-1/4 justify-between">
+            <button class="btn px-2 rounded-full btn-primary">
+              <div class="flex justify-center items-center gap-2">
+                    <p>Life</p>
+                  <img src="images/heart.svg" alt="">
+                  <span>1</span>
+              </div>
+            </button>
+
+            <button class="btn px-2 rounded-full btn-primary">
+               <div class="flex justify-center items-center gap-2">
+                    <p>Score</p>
+                  <img src="images/usd.svg" alt="">
+                  <span>1</span>
+              </div>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- Score -->
       <section class="score"></section>
     </main>
   </body>
