--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       class="bg-[#010313] min-h-screen bg-[url('images/background.png')] bg-no-repeat bg-center"
     >
       <!-- Home screen -->
-      <section
-        class="home hidden min-h-screen text-white flex justify-center items-center"
+      <section id="home-screen"
+        class="home min-h-screen text-white flex justify-center items-center"
       >
         <div class="flex flex-col gap-5 items-center">
           <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
           <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-          <button class="btn btn-active bg-white text-black">Play Now</button>
+          <button onclick="play()" class="btn btn-active bg-white text-black">Play Now</button>
         </div>
       </section>
       <!-- Play Ground -->
-      <section class="play-ground">
+      <section id="play-ground" class="hidden">
         <!-- Playground container -->
         <div class=" flex flex-col items-center gap-20 pt-12">
           <!-- screen -->
@@ -100,7 +100,19 @@
         </div>
       </section>
       <!-- Score -->
-      <section class="score"></section>
+      <section class="score hidden flex border min-h-screen  justify-center items-center">
+        <div id="score" class="text-white text-center space-y-5 rounded-lg p-4 ">
+          <!-- bg-gradient-to-r from-[#FFFFFF8F] to-[#98979700] -->
+          <h1 class="text-8xl">
+            <span class="font-extrabold">Score:</span><span>14</span>
+          </h1>
+          <button class="btn">Play again</button>
+          <p>Practice will make you Pro</p>
+        </div>
+      </section>
     </main>
+
+    <script src="scripts/utility.js"></script>
+    <script src="scripts/alpha-clash.js"></script>
   </body>
 </html>
