updated score and life base on key press

--- a/index.html
+++ b/index.html
@@ -81,19 +81,22 @@
           </div>
           <!-- life score-->
           <div class="flex w-1/4 justify-between">
+
+            <!-- Display life -->
             <button class="btn px-2 rounded-full btn-primary">
               <div class="flex justify-center items-center gap-2">
                     <p>Life</p>
                   <img src="images/heart.svg" alt="">
-                  <span>1</span>
+                  <span id="current-life">5</span>
               </div>
             </button>
 
+            <!-- display score -->
             <button class="btn px-2 rounded-full btn-primary">
                <div class="flex justify-center items-center gap-2">
                     <p>Score</p>
                   <img src="images/usd.svg" alt="">
-                  <span>1</span>
+                  <span id="current-score">0</span>
               </div>
             </button>
           </div>
