Modiefied some changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha Clash Pro</title>
     <!-- Fav icon -->
-    <link rel="icon" type="image/x-icon" href="/images/alphabet.png">
+    <link rel="icon" type="image/x-icon" href="images/alphabet.png">
     <!-- Daisy Ui ans Tailwind -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.7.1/dist/full.min.css"
